added isNextTo(with Maarten)